# tubechord

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  HANDBOOK.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AI_CONTRIBUTING.md
tests/: test_sheet_exporter.py  test_sheet_renderers.py
tubechord/: __init__.py  audio_processor.py  chord_analyzer.py  cli.py  midi_exporter.py  sheet_exporter.py  sheet_models.py  sheet_renderers.py  voicing_strategy.py
typings/midiutil/: __init__.pyi
typings/yt_dlp/: __init__.pyi
